chore: strip comments and update docs
