# api.yaml
@@ -107,10 +107,10 @@ paths:
       tags: [Patient]
       parameters:
         - in: query
-          name: specialization
+          name: department
           schema:
             type: string
-          description: Filter by specialization
+          description: Filter by department
       responses:
         200:
           description: List of doctors
@@ -125,8 +125,7 @@ paths:
                       type: integer
                     name:
                       type: string
-                    specialization:
-                      type: string
+
                     department:
                       type: string
                     availability:
@@ -338,8 +337,6 @@ paths:
                   type: string
                 password:
                   type: string
-                specialization:
-                  type: string
                 department_id:
                   type: integer
       responses:
@@ -363,8 +360,6 @@ paths:
             schema:
               type: object
               properties:
-                specialization:
-                  type: string
                 department_id:
                   type: integer
                 email:
